
[ BUG FIXES ]

- $m->flush_buffer was sending out '' to the buffer, even if no output
existed.  This caused ApacheHandler to send headers, which broke
redirects, for example.
- Fix broken Apache::Status page  (reported by Thomas A. Lowery).
- The lexing code now handles some weird edge case errors in a better
way.  One of these involved a component starting with a invalid block
name like <%foo>.

1.09_01  April 4, 2002

This is a big release and there are a lot of backwards
incompatibilities.  Please make sure to read the UPGRADE document,
which covers these in more detail.

[ INCOMPATIBLE CHANGES ]

- ** Errors now report line numbers from the component source file.
- ** The Parser class has been removed entirely.  Its functionality
has been split between the Lexer and Compiler objects.  L{Compiler}
- ** The debug file feature has been removed.
- ** The previewer has been removed.
- ** The Interp use_reload_files parameter has been removed.  The new
static_source parameter provides a useful, and conceptually simpler,
replacement.  L{Interp/static_source}
- ** Mason's built in caching now uses Cache::Cache to do all the
heavy lifting.  This means that parameters for both the $m->cache and
$m->cache_self methods have changed.
- ** The ApacheHandler's top_level_predicate parameter has been
removed.
- ** The mc_* commands have been removed entirely.
- ** The Interp's taint_check parameter has been removed.  Mason now
simply determines whether or not it is running in taint mode and acts
appropriately without user intervention.
- ** Mason now uses Apache::Request as its default argument processing
module.  You can explicitly use CGI.pm if you prefer.
- ** The ApacheHandler module no longers accepts parameters when
imported.  Instead, you specify this parameter via the ApacheHandler
constructor.
- ** The ApacheHandler module now requires a minimum of mod_perl 1.22.
- ** The Component's run_count() and first_time() methods have been
removed.